<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTask">


    <TextView
        android:id="@+id/heading_add_task"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/heading_add_task"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_add_task">

        <TextView
            android:id="@+id/task_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/task_title" />

        <EditText
            android:id="@+id/add_task_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/task_title_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect" />

        <TextView
            android:id="@+id/task_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/task_description"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/add_task_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/task_description_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect" />

        <TextView
            android:id="@+id/spinner_team_selection_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/spinner_team_selection_label"
            android:layout_marginTop="25dp"/>

        <Spinner
            android:id="@+id/team_selection_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed-medium" />

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/button_add_task_add_task"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:background="#1e78d9"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/addtask_task_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/task_counter_text"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>