<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Settings">


    <TextView
        android:id="@+id/heading_settings"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/heading_settings"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_settings">

        <TextView
            android:id="@+id/username_input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/username_input_label_text" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/username_field_hint"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/update_username_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/update_username_button_text"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:background="#1e78d9"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>